[metadata]
name = ansible_releases
summary = Ansible Releases
description-file =
    README.rst
author = Paul Belanger
author-email = pabelanger@redhat.com
home-page = https://www.ansible.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages = ansible_releases

[entry_points]
console_scripts =
    generate-ansible-collection = ansible_releases.cmd.generate_ansible_collection:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
builders = html
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html
